# hask-tsp

./: .gitignore  README.md  hask-tps.cabal
src/: Main.hs  Shuffle.hs  TSP.hs  TSP.screwed.hs  TSPData.hs  cities.csv
