name:                hask-tsp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sungeunchoi-kr/hask-tsp.git
license:             BSD3
license-file:        LICENSE
author:              Sung E. Choi
maintainer:          sungeunchoi.kr@gmail.com
copyright:           2019 Sung E. Choi
category:            Algorithm
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hask-tps
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , mtl
    , random
    , MonadRandom
    , containers
    , time
    , mmorph
    , sort
  other-modules:
    Shuffle
    , TSP
    , TSPData
